--- a/src/components/common/AuthBar/AuthBar.scss
+++ b/src/components/common/AuthBar/AuthBar.scss
@@ -21,11 +21,17 @@
   }
 
   &__menu {
+    display: inline-flex;
+    align-items: center;
+
     &--name {
       font-size: 1.5rem;
-      line-height: 45px;
-      transform: translateY(-5px);
+      line-height: 2rem;
       margin-right: 7.5px;
+      white-space: nowrap;
+      max-width: calc(2 * 100vw / 7 - 80px);
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     &--image-logo {
@@ -38,7 +44,6 @@
       padding: 5px;
       border-radius: 50px;
       cursor: pointer;
-      transform: translateY(3.5px);
     }
   }
 
