--- a/src/components/common/Search/SearchResultItem/SearchResultItem.scss
+++ b/src/components/common/Search/SearchResultItem/SearchResultItem.scss
@@ -60,7 +60,7 @@
     }
 
     span {
-      font-family: "#VI. Gilroy" !important;
+      font-family: "header" !important;
     }
   }
 
